# Midjourney-API

./: .env  .gitignore  Dockerfile  README.md  app.py  bot.py  docker-compose.yaml  ewfnewoif.py  pyproject.toml
API/: bot.py  celeryconfig.py  main.py
Bot/: Dockerfile  bot.py
api/: __init__.py  bot.py  main.py  tasks.py
