[tool.poetry]
name = "midjourney"
version = "0.1.0"
description = ""
authors = ["Konstantin <k1st.volkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.100.0"}
aiohttp = "^3.8.4"
discord = "^2.3.1"
celery = {extras = ["redis"], version = "^5.3.1"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
